app-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivago-app-go
  labels:
    app: trivago-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: trivago-app
    version: v1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivago-app-go
  labels:
    app: trivago-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivago-app
      version: v1.0.0
  template:
    metadata:
      labels:
        app: trivago-app
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
    spec:
      containers:
      - name: trivago-app
        image: trivago-go:trivago-go-app
        ports:
        - name: http
          containerPort: 8080
        - name: probe
          containerPort: 8086
        livenessProbe:
          httpGet:
            path: /health
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probe
          periodSeconds: 5
