gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trivago-app
  labels:
    app: trivago-app
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - trivago-app.local
