weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trivago-app
  labels:
    app: trivago-app
spec:
  hosts:
    - trivago-app.local
  gateways:
    - trivago-app
  http:
    - route:
        - destination:
            host: trivago-app-go
          weight: 70
        - destination:
            host: trivago-app-java
          weight: 30
